--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -46,13 +46,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
                 
                 
-                <td>
+                
 <!--                     <a th:href="${'./new/cuadrodirectivo'}" class="btn btn-primary">Nuevo</a>-->
-                    <a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-info">Mostrar</a>
-                <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-success">Editar</a>
-               <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Eliminar</a>
+                 <td>   <a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-info">Mostrar</a></td>
+              <td>  <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-success">Editar</a></td>
+              <td> <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Eliminar</a></td>
                 <!--<a th:href="${'./delete/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-danger">Delete</a>-->
-                </td>
+                
             </tr>
         </table>
     </div>
