--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -93,10 +93,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
                 <!--<td th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre Capacitador</td>-->
                 
-                <td>
-                    <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-info">Mostrar</a>
-                <a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-success">Editar</a>
-                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Eliminar</a>
+                
+                  <td>  <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-info">Mostrar</a></td>
+              <td>  <a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-success">Editar</a></td>
+              <td>   <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Eliminar</a></td>
                <!--<td><a th:href="${'./delete/' + capacitacion.codigocapacitacion}" class="btn btn-danger">Delete</a></td>-->
                     <!--<td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Delete</a></td>-->  
                 </td>
