--- a/src/main/resources/templates/fragments/otherreports/exoneradoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/exoneradoreporte.html
@@ -1,113 +1,57 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<!--     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">-->
-      <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
-     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
-     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    
-     
-     
-    <title>SISADMRH-Reporte de Personal Exonerado de Marcacion</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+    <head lang="en">
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<!--<div class="container">-->
-<div class="row">
- <div class="col-md-3">
+     <div class="contenedorizq">
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
+    <div class="row">
+        <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
-        <div class="col-md-7">
-    <h3 align="center">Generar Reporte de Personal Exonerado de Marcacion</h3>
-    <br><br><br>
-    
-        <form class="form-horizontal"  id="fromreportexonerado" > 
-          
-           <!--<div class="col-md-6">-->
-         
-            <div class="form-group">
-                <label class="col-sm-5 control-label">Fecha Desde(*):</label>
-                <div class="col-sm-4">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text"  name="fechacontrataciondesde" id="fechacontrataciondesde"  />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-5 control-label">Fecha Hasta(*):</label>
-                <div class="col-sm-4">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text"  name="fechacontratacionhasta" id="fechacontratacionhasta"  />
-                </div>
-            </div>
-           
-           <!--</div>
-              <div class="col-md-6">
-                   </div>-->
+        <div class="col-md-8">
+            <h3 align="center">REPORTE DE EXONERADOS DE MARCACION </h3>
+            <div>
+                <form class="form-horizontal" id="formreport">
 
-
-          
+<!--                    <div class="form-group">
+                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                        </div>
+                    </div>-->
+                     <div class="form-group">    
+                        <label class="col-sm-3 control-label">Fecha Inicial:</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
+                        </div>
+                        <label class="col-sm-2 control-label">Fecha Final:</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
+                        </div>
+                    </div>
+                     <div class="form-group">    
+                         <td><a class="btn btn-default" id="pdf">pdf</a></td>
+                    </div>
+                     <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
+                    </div>
+                </form>
+            </div>
+        </div>
         <div class="col-md-12">
-      <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
-                <button  class="btn btn-default"  id="generar">Consultar</button>
-                <button type="reset" class="btn btn-default">Limpiar</button>
-            </div>
-            </div>
-           </form>
-    </div>
-
-      <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-</div>
-
-        
-       
+    </div>
 </body>
-<script src="../static/css/hydro/js/jquery.js"></script>
-<script src="../static/css/stylemenu.js"></script>
-	        
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script>
-// 		$(document).ready(function() {
-// 			$(function () {
-// 				$("#datepickersince").datepicker();
-// 			});
-
-// 			$(function () {
-// 				$("#datepickeruntil").datepicker();
-// 			});
-// 		});
-		
-		$(document).ready(function () {
-		    var date = new Date();
-		    var currentMonth = date.getMonth();
-		    var currentDate = date.getDate();
-		    var currentYear = date.getFullYear();
-                    
-		    $('#fechacontratacionhasta').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		       dateFormat: 'yy-mm-dd'
-		    });
-		    
-		    $('#fechacontrataciondesde').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#generar').click(function(){
-            $("#fromreportexonerado").attr('action', '../pdfexoneradoreporte/');
-            $("form#fromreportexonerado").submit();
-            
-        });
-                    
-		});
-	</script>
-        
-<!--        <script>
+<script>
     $(document).ready(function () {
         $('#fechainicial').datepicker({
             dateFormat: 'yy-mm-dd'
@@ -116,13 +60,17 @@
         $('#fechafinal').datepicker({
             dateFormat: 'yy-mm-dd'
         });
-        $('#generar').click(function(){
-            $("#fromreportpuesto").attr('action', '../pdf/'+ $("#fechacontrataciondesde").val().toString()+ $("#fechacontratacionhasta").val().toString());
-            $("form#fromreportpuesto").submit();
+        $('#pdf').click(function(){
+             $("#formreport").attr('action', '../pdfexoneradoreporte/');
+            $("form#formreport").submit();
+            
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../exoneradomarcacionxls');
+            $("form#formreport").submit();
             
         });
     });
-</script>-->
-        
-        
+</script>
+
 </html>
