--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -67,7 +67,7 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Cuadros Directivos <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-                                             <li><a href="#" th:href="@{/cuadrodirectivos/buscar/}">Buscar Cuadros directivos</a></li>
+                                             <!--<li><a href="#" th:href="@{/cuadrodirectivos/buscar/}">Buscar Cuadros directivos</a></li>-->
 						<li><a href="#" th:href="@{/cuadrodirectivos/}">Consultar Cuadros Directivos</a></li>
                                                 <li><a href="#" th:href="@{/cuadrodirectivos/new/cuadrodirectivo}">Crear Cuadros Directivos</a></li>
                                                 <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
@@ -76,7 +76,7 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-                                            <li><a href="#" th:href="@{/capacitaciones/buscar/}">Buscar Capacitaciones</a></li>
+                                            <!--<li><a href="#" th:href="@{/capacitaciones/buscar/}">Buscar Capacitaciones</a></li>-->
 						<li><a href="#" th:href="@{/capacitaciones/}">Consultar Capacitaciones</a></li>
                                                 <li><a href="#" th:href="@{/capacitaciones/new/capacitacion}">Crear Capacitaciones</a></li>
                                                 <li><a href="#" th:href="@{/capacitaciones/report/}">Reporte de Capacitaciones</a></li>
@@ -93,7 +93,7 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Capacitador <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-                                             <li><a href="#" th:href="@{/capacitadores/buscar/}">Buscar Capacitador</a></li>
+                                             <!--<li><a href="#" th:href="@{/capacitadores/buscar/}">Buscar Capacitador</a></li>-->
 						<li><a href="#" th:href="@{/capacitadores/}">Consultar Capacitador</a></li>
                                                  <li><a href="#" th:href="@{/capacitadores/new/capacitador}">Crear Capacitador</a></li>
                                                  <!--<li><a href="#" th:href="@{/capacitadores/report/}">Reporte Capacitador</a></li>-->
@@ -107,7 +107,6 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/costocapacitaciones/}">Consultar Costo Capacitaciones</a></li>
                                                  <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitacion</a></li>
-                                                  <li><a href="#" class="dropdown">Crear Costo Capacitacion2</a>
                                                     <ul class="dropdown-menu forAnimate" >
                                                       <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitacion2</a></li>
                                                     </ul>
@@ -154,7 +153,7 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/comites/}">Consultar comites</a></li>
                                                  <li><a href="#" th:href="@{/comites/new/comite}">Crear comite</a></li>
-                                                  <li><a href="#" th:href="@{/comites/buscar/}">Buscar Comites</a></li>
+                                                  <!--<li><a href="#" th:href="@{/comites/buscar/}">Buscar Comites</a></li>-->
                                                  <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
                                         </ul>
 				</li>
@@ -190,7 +189,7 @@
                                   <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Inasistencias <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-                                              <li><a href="#" th:href="@{/inasistencias/buscar/}">Buscar Capacitaciones</a></li>
+                                              <!--<li><a href="#" th:href="@{/inasistencias/buscar/}">Buscar Capacitaciones</a></li>-->
                                                 <li><a href="#" th:href="@{/inasistencias/}">Consultar Inasistencias</a></li>
                                                 <li><a href="#" th:href="@{/inasistencias/new/inasistencia}">Crear Inasistencias</a></li>
                                                 <!--<li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte de Comisiones</a></li>-->
@@ -264,7 +263,8 @@
                                                 <li><a href="#" th:href="@{/otherreports/constanciasalariales/}">constancias salariales</a></li>
                                                  <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
                                                  <li><a href="#" th:href="@{/otherreports/plazasocupadas/}">Reporte Plazas Ocupadas</a></li>
-                                                 <li><a href="#" th:href="@{/puestos/reporte/puesto}">Reporte Puestos a Caducar</a></li>
+                                                 <li><a href="#" th:href="@{/otherreports/puestoscaducar/}">Reporte Puesto a Caducar</a></li>
+                                                 <!--<li><a href="#" th:href="@{/puestos/reporte/puesto}">Reporte Puestos a Caducar</a></li>-->
                                                  <li><a href="#" th:href="@{/empleado/reporte/contrataciones}">Reporte Contrataciones</a></li>
                                                  <li><a href="#" th:href="@{/empleado/reporte/despidos}">Reporte de Despidos</a></li>
                                                  <li><a href="#" th:href="@{/empleado/reporte/estadisticoactivo}">Estadistico de Personal Activo</a></li>
