--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -55,14 +55,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <td th:text="${asistenciacapacitacion.email}">Correo</td>
 
 
-                    <td>
-                             <a th:href="${'./new/asistenciacapacitacion'}" class="btn btn-primary">Nuevo</a>
-                        <a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a>
-                        <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a>
-                     <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a>
-                    </td>
+                    
+                            <td> <a th:href="${'./new/asistenciacapacitacion'}" class="btn btn-primary">Nuevo</a></td>
+                        <td><a th:href="${'./show/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-info">Mostrar</a></td>
+                      <td>  <a th:href="${'./edit/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-success">Editar</a></td>
+                   <td>  <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${asistenciacapacitacion.codigoasistenciacapacitacion} + '\');'" >Eliminar</a></td>
+                    
                         <!--<a th:href="${'./delete/' + asistenciacapacitacion.codigoasistenciacapacitacion}" class="btn btn-danger">Delete</a>-->
-                    </td>
                 </tr>
             </table>
         </div>
