--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -44,7 +44,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <th>Celular</th>
                   <th>Email</th>
 <!--                  <th>Codigo Empleado</th>-->
-                  <th>Acciones</th>
+                  <th align="center">Acciones</th>
             </tr>
             </thead>
             <tr th:each="capacitador : ${capacitadores}">
@@ -64,13 +64,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${capacitador.emailcapacitador}">Email</td>
 <!--                <td th:text="${capacitador.codigoempleado.codigoempleado}">Email</td>-->
                 
-                <td>
+                
                       <!--<a th:href="${'./new/capacitador'}" class="btn btn-primary">Nuevo</a>-->
-                    <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-info">Mostrar</a>
-                <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-success">Edit</a>
-                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Delete</a></td>
+                   <td> <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-info">Mostrar</a> </td>
+               <td> <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-success">Editar</a> </td>
+              <td>   <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Delete</a></td>
                 <!--<a th:href="${'./delete/' + capacitador.codigocapacitador}" class="btn btn-danger">Delete</a>-->
-                </td>
+               
             </tr>
         </table>
     </div>
