--- a/src/main/resources/templates/fragments/otherreports/hijoscapespreport.html
+++ b/src/main/resources/templates/fragments/otherreports/hijoscapespreport.html
@@ -42,7 +42,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                         <td><a class="btn btn-default" id="generar">PDF</a></td>
+                    </div>
+                    <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
                     </div>
                 </form>
             </div>
@@ -63,6 +66,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         });
         $('#generar').click(function(){
             $("#formreport").attr('action', '../hijoscapesp/'+ $("#codigo").val().toString());
+            $("form#formreport").submit();
+            
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../hijoscapxls');
             $("form#formreport").submit();
             
         });
